colang-cli/tests/samples/good/int_division_is_left_associative.co
fun main() {
  assert(9 / 2 / 2 == 2);
}
