colang-cli/tests/samples/compile_error/binary_operator_wrong_type.co
fun main() {
  var x = 5 / true;
}
